# stable-learning-control

./: .buildinfo  .bumpversion.cfg  .flake8  .gitignore  .gitmodules  .release-please-manifest.json  .release_changelog.json  .versionrc  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DIFFERENCES WITH HAN.MD  DIFFERENCES.md  Dockerfile  Hello_there.md  NETWORK_OVERVIEW.MD  New LAC implementation.md  POSSIBLE CAUSES.MD  README.md  SECURITY.md  TEST.md  TODO.md  TODOS.md  TODOs.md  client_id  contributing.md  dev_requirements.txt  genindex.html  index.html  objects.inv  package-lock.json  package.json  pnpm-lock.yaml  py-modindex.html  pyproject.toml  requirements.txt  requirements_dev.txt  search.html  searchindex.js  (+3 more)
.devcontainer/: devcontainer.json
.doctrees/: index.doctree
.doctrees/autoapi/: index.doctree
.doctrees/dev/: doc_dev.doctree  license.doctree
.doctrees/etc/: acknowledgements.doctree
.doctrees/usage/: algorithms.doctree  benchmarks.doctree  docker.doctree  eval_robustness.doctree  hyperparameter_tuning.doctree  installation.doctree  plotting.doctree  running.doctree  saving_and_loading.doctree
.doctrees/utils/: loggers.doctree  mpi.doctree  plotter.doctree  run_utils.doctree  testers.doctree
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  user_story.md
.github/workflows/: autotag_ci.yml  bayesian_learning_control.yml  bump_ci.yml  ci.yml  code_quality_ci.yml  commit_pull_request.yml  docs.yml  docs_build_ci.yml  docs_check_ci.yml  docs_publish_ci.yml  docs_release_ci.yml  documentation.yml  linux_ci.yml  mac_ci.yml  main_pull_push.yml  main_release.yml  mlc.yml  mlc_ci.yml  mlc_linux_ci.yaml  old_ci.yml  pull_ci.yml  push_ci.yml  release-changelog-builder-config.json  release.yml  release__ci.yml  release_ci.yml  release_please.yml  stable_learning_control.yml  svg_test.yml  test.yml  test_event.yaml  update_semver.yml  update_semver_ci.yml  win_ci.yml
.standard-version/: bumpversion.cfg.updater.js  conf.py.updater.js
_modules/: index.html
_modules/stable_learning_control/: run.html  user_config.html  version.html
_sources/autoapi/: index.rst.txt
_sources/dev/: contributing.rst.txt  doc_dev.rst.txt
_sources/etc/: acknowledgements.rst.txt
_sources/usage/: algorithms.rst.txt  benchmarks.rst.txt  hyperparameter_tuning.rst.txt  installation.rst.txt  plotting.rst.txt  running.rst.txt  saving_and_loading.rst.txt
_sources/utils/: mpi.rst.txt  plotter.rst.txt  testers.rst.txt
autoapi/: index.html
autoapi/stable_learning_control/: index.html
bayesian_learning_control/: README.md  __init__.py  env_config.py  run.py  user_config.py  version.py
bayesian_learning_control/common/: __init__.py  helpers.py
bayesian_learning_control/control/: README.md  __init__.py
bayesian_learning_control/modeling/: README.md  __init__.py
bayesian_learning_control/simzoo/: README.md  setup.cfg
bayesian_learning_control/utils/: __init__.py  serialization_utils.py
containers/: README.md  description.txt
containers/docs_release/: Dockerfile
control/: main.py  requirements.txt  setup.py  variant.py
control/algos/: description.txt  run.py
dev/: contributing.html  doc_dev.html  license.html
docs/: Makefile  conf.py  docs_requirements.txt  make.bat  requirements.txt
docs/algorithms/: sac.rst  td3.rst
docs/latex/: imgmath_latex_preamble.tex  latex_elements.tex.txt
docs/source/: TODO.md  conf.py  description.txt  index.rst
docs/spinningup/: bench.rst  exercise2_2_soln.rst  spinningup.rst
docs/user/: algorithms.rst  introduction.rst  running.rst
docs/utils/: logger.rst
etc/: acknowledgements.html
examples/: README.md  eval_robustness.py  manual_env_policy_inference.py  manual_robustness_eval_plots.py
examples/pytorch/: lac_ray_hyper_parameter_tuning.py  sac_exp_grid_search.py  sac_ray_hyper_parameter_tuning.py
examples/tf2/: lac_ray_hyper_parameter_tuning.py  sac_exp_grid_search.py  sac_ray_hyper_parameter_tuning.py
experiments/: README.md  haarnoja_et_al_2019_hopper.yml  han_et_al_2020_oscillator.yml  lac_cart_pole_cost_debug_test.yml  lac_cart_pole_cost_experiment_example.yml  lac_cartpole_cost_experiment_example.yml  lac_oscillator_experiment.yml  lac_oscillator_experiment_example.yml  rick_desong_2021.yml  sac_half_cheetah.yml  simple_ant_env_kwargs_test.yml
experiments/cfgs/: lac_oscillator.yml
experiments/gpl_2021/: lac2_cart_pole_cost.yml  lac3_cart_pole_cost.yml  lac4_cart_pole_cost.yml  (+5 more)
machine_learning_control/: README.md  env_config.py  run.py  test_ci_bug.py  user_config.py  version.py
requirements/: requirements.txt  requirements_gpu.txt
sandbox/: README.md  check_float_torch.py  create_plot.py  description.md  import_test.py  is_scalar.py  load_pytorch_model_example.py  load_tf2_model_example.py  logger_example.py  mean_plots_test.py  oscillator_inference.py  plot_test.py  pytorch_lr_scheduler_test.py  robustness_eval.py  tb_example_graph.py  test.py  test_algorithm_seeding.py  test_combined_shape.py  test_debugger.py  test_envs.py  test_finite_horizon_replay_buffer.py  test_gradient_tape.py  test_gym_env.py  test_import_tf2.py  test_is_scalar.py  test_manual_robustness_eval.py  test_oscillator.py  test_oscillator_env.py  test_print.py  test_replay_buffer.py  test_safer_eval.py  test_saved_env.py  test_string.py  test_su_logger.py  test_tensorboardx.py  test_tf_lr_decay.py  test_tf_model_load.py  test_torch_clamp.py  test_torch_lr_decay copy.py  test_torch_lr_decay.py  (+5 more)
scripts/: Haarnoja_2018_walker.sh  Han_2019_oscillator.sh  Han_2019_oscillator_lac.sh  Han_2019_oscillator_sac.sh  design_lr_scheduler.py  logger.py  mlc_exp_grid_search.py  ray_hyper_parameter_tuner.py
simzoo/: setup.py
stable_learning_control/: __init__.py  env_config.py  run.py  user_config.py  version.py
testdata/: README.md
tests/: test_algos_import.py  test_eg.py
usage/: algorithms.html  benchmarks.html  docker.html  eval_robustness.html  hyperparameter_tuning.html  installation.html  plotting.html  running.html  saving_and_loading.html
utils/: loggers.html  mpi.html  plotter.html  run_utils.html  testers.html
(+1962 files in other folders)
