# NOTE: Ensure you have pip>=21.3.1 when you want to install this package in editable mode.
[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

# Project configuration.
[project]
name = "stable_learning_control"
dynamic = ["version", "readme"]
authors = [
    {name = "Rick Staa", email = "rick.staa@outlook.com"}
]
license = {file = "LICENSE"}
description = "A package that contains several gymnasium environments with cost functions compatible with (stable) RL agents (i.e. positive definite)."
keywords = [
    "reinforcement-learning",
    "simulation",
    "stability",
    "robustness",
    "control",
    "openai-gym",
    "gymnasium",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering"
]
dependencies = [
    "gymnasium>=0.28.1",
    "numpy",
    "scipy",
    "torch>=1.5",
    "joblib",
    "tensorboard",
    "mpi4py",
    "psutil",
    "tqdm",
    "cloudpickle",
    "seaborn",
    "matplotlib",
    "pandas",
    "ruamel.yaml",
    "ray[default]"
]
requires-python = ">=3.8"

[project.optional-dependencies]
# NOTE: Ensure you have pip>=21.2 for the recursive dependencies to work.
tf = [
    "tensorflow>=2",
    "tensorflow_probability"
]
tuning = [
    "ray[tune]",
    "hyperopt",
]
dev = [
    "stable_learning_control[tf,tuning]",
    "pytest>=7.3.2",
    "pytest-cov>=4.1.0",
    "pytest-html>=3.2.0",
    "syrupy>=4.0.2",
    "flake8>=6.0.0",
    "black>=23.3.0",
]
docs = [
    "stable_learning_control[tf,tuning]",
    "docutils",
    "sphinx",
    "sphinx-autobuild",
    "sphinx-rtd-theme",
    "myst_parser",
    "pygments>=2.11.2",
]
all = [
    "stable_learning_control[tf, tuning, dev, docs]",
]

[project.urls]
repository = "https://github.com/rickstaa/stable-learning-control"
source = "https://github.com/rickstaa/stable-learning-control"
documentation = "https://rickstaa.dev/stable-learning-control"

# Python tools configuration.
[tool.setuptools]
packages = ["stable_learning_control"]

[tool.setuptools.dynamic]
readme = {file = "README.md", content_type = "text/markdown"}

[tool.setuptools_scm]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
norecursedirs = ["sandbox"]
