[metadata]
name = bayesian_learning_control
version = 0.0.1
description = A python package for performing the whole safe machine learning control pipeline.
long_description = file: README.md, CHANGELOG.md, LICENSE.md
long_description_content_type=text/markdown
author = Rick Staa
author_email = rick.staa@outlook.com
url = https://github.com/rickstaa/bayesian_learning_control
keywords = rl, openai gym
license = Rick Staa copyright
license_file = LICENSE.md
classifiers =
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering"

[options]
include_package_data = True
install_requires =
    gym
    numpy
    torch >= 1.5
    joblib
    tensorboard
    mpi4py
    psutil
    tqdm
    cloudpickle
    seaborn
    ipython
    matplotlib
    pandas
    ruamel.yaml
python_requires = >=3.6
packages=find_namespace:

[options.packages.find]
where=
    ./bayesian_learning_control
    ./bayesian_learning_control/simzoo
exclude=
    bayesian_learning_control.simzoo
include=
    bayesian_learning_control.simzoo.simzoo

[options.extras_require]
all =
    %(tf)s
    %(tuning)s
    %(dev)s
    %(docs)s
tf =
    tensorflow >= 2
    tensorflow-probability
tuning =
    ray[tune]
    hyperopt
docs =
    %(tf)s
    %(tuning)s
    docutils
    sphinx
    sphinx-autobuild
    sphinx-rtd-theme
    recommonmark
    sphinxcontrib-katex
dev =
    %(tf)s
    %(tuning)s
    pytest
    pytest-cov
    pytest-html
    bump2version
    flake8
    black
build =
    %(all)s  # Dev install should have all packages

[flake8]
max-line-length = 88
extend-ignore = E203
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist,
    sandbox
per-file-ignores =
    bayesian_learning_control/control/utils/test_policy.py: E731
    __init__.py: F401, E501
max-complexity = 10
